make credential dialogs scrollable. Closes #2959

--- a/src/keepass2android-app/Resources/layout/sftp_credentials.axml
+++ b/src/keepass2android-app/Resources/layout/sftp_credentials.axml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+<LinearLayout
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -59,3 +62,4 @@
         android:singleLine="true"
         android:text="/home/philipp" />
 </LinearLayout>
+</ScrollView>
