--- a/src/keepass2android-app/Resources/layout/url_credentials.xml
+++ b/src/keepass2android-app/Resources/layout/url_credentials.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+  <RelativeLayout
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
     <EditText
         android:id="@+id/cred_username"
         android:layout_width="fill_parent"
@@ -22,4 +25,5 @@
         android:layout_below="@id/cred_password"
         android:entries="@array/cred_remember_modes"
         android:id="@+id/cred_remember_mode" />
-</RelativeLayout>
+  </RelativeLayout>
+</ScrollView>
