--- a/src/java/JavaFileStorageTest-AS/app/src/main/res/layout/sftp_credentials.xml
+++ b/src/java/JavaFileStorageTest-AS/app/src/main/res/layout/sftp_credentials.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+<LinearLayout
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -217,3 +220,4 @@
             android:text="Resolve" />
     </LinearLayout>
 </LinearLayout>
+</ScrollView>
