--- a/src/keepass2android-app/Resources/layout/sftpcredentials.xml
+++ b/src/keepass2android-app/Resources/layout/sftpcredentials.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
@@ -197,3 +200,5 @@
 			 />
 
 </LinearLayout>
+
+</ScrollView>
