--- a/src/java/android-filechooser-AS/app/src/main/res/drawable/afc_selector_button_ok_saveas_light.xml
+++ b/src/java/android-filechooser-AS/app/src/main/res/drawable/afc_selector_button_ok_saveas_light.xml
@@ -8,8 +8,6 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/afc_ic_button_ok_saveas_dark_pressed" android:state_pressed="true"/>
-    <item android:drawable="@drawable/afc_ic_button_ok_saveas_dark_focused" android:state_focused="true"/>
-    <item android:drawable="@drawable/afc_ic_button_ok_saveas_dark"/>
+    <item android:drawable="@drawable/save_icon"/>
 
 </selector>
