--- a/src/java/android-filechooser-AS/app/src/main/res/layout/afc_listview_files.xml
+++ b/src/java/android-filechooser-AS/app/src/main/res/layout/afc_listview_files.xml
@@ -9,6 +9,8 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:divider="@null"
+    android:dividerHeight="0dp"
     android:fastScrollEnabled="true" >
 
 </ListView>
