--- a/src/java/android-filechooser-AS/app/src/main/res/values/themes_light.xml
+++ b/src/java/android-filechooser-AS/app/src/main/res/values/themes_light.xml
@@ -16,9 +16,11 @@
     - Actual themes which extend BaseThemeHelpers: contain customizations that are the same for all API levels.
     -->
 
-    <style name="Afc.BaseTheme.Light" parent="@android:style/Theme.Light"></style>
+    <style name="Afc.BaseTheme.Light" parent="Theme.Material3.Light.NoActionBar">
 
-    <style name="Afc.BaseThemeHelper.Light" parent="@style/Afc.BaseTheme.Light">
+    </style>
+
+    <style name="Afc.BaseThemeHelper.Light" parent="Theme.Material3.Light.NoActionBar">
         <item name="afc_ic_menu_home">@drawable/afc_ic_menu_home</item>
         <item name="afc_ic_menu_gridview">@drawable/afc_ic_menu_gridview</item>
         <item name="afc_ic_menu_listview">@drawable/afc_ic_menu_listview</item>
@@ -46,7 +48,6 @@
 
         <item name="android:windowFrame">@null</item>
         <item name="android:windowTitleStyle">@style/AOSP_DialogWindowTitle</item>
-        <item name="android:windowBackground">@drawable/aosp_dialog_full_holo_light</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
@@ -78,11 +79,6 @@
     </style>
 
     <style name="Afc.Theme.Light" parent="@style/Afc.BaseThemeHelper.Light">
-
-        <!-- AOSP -->
-
-        <item name="android:windowBackground">@drawable/aosp_background_holo_light</item>
-
         <!-- android-filechooser -->
 
         <item name="afc_theme_dialog">@style/Afc.Theme.Dialog.Light</item>
@@ -92,8 +88,8 @@
         <item name="afc_badge_file_provider_localfile">@drawable/afc_badge_file_provider_localfile_dark</item>
         <item name="afc_selector_image_button">@drawable/afc_selector_image_button_light</item>
         <item name="afc_selector_button_location">@drawable/afc_selector_button_location_light</item>
-        <item name="afc_selector_main_button_navi_left">@drawable/afc_selector_main_button_navi_left_light</item>
-        <item name="afc_selector_main_button_navi_right">@drawable/afc_selector_main_button_navi_right_light</item>
+        <item name="afc_selector_main_button_navi_left">@drawable/afc_selector_main_button_navi_left</item>
+        <item name="afc_selector_main_button_navi_right">@drawable/afc_selector_main_button_navi_right</item>
         <item name="afc_selector_button_ok_saveas">@drawable/afc_selector_button_ok_saveas_light</item>
         <item name="afc_selector_action_navi_left_foreground">@drawable/afc_selector_action_navi_left_light_foreground</item>
         <item name="afc_selector_action_navi_right_foreground">@drawable/afc_selector_action_navi_right_light_foreground</item>
@@ -120,8 +116,8 @@
         <item name="afc_badge_file_provider_localfile">@drawable/afc_badge_file_provider_localfile_dark</item>
         <item name="afc_selector_image_button">@drawable/afc_selector_image_button_light</item>
         <item name="afc_selector_button_location">@drawable/afc_selector_button_location_light</item>
-        <item name="afc_selector_main_button_navi_left">@drawable/afc_selector_main_button_navi_left_light</item>
-        <item name="afc_selector_main_button_navi_right">@drawable/afc_selector_main_button_navi_right_light</item>
+        <item name="afc_selector_main_button_navi_left">@drawable/afc_selector_main_button_navi_left</item>
+        <item name="afc_selector_main_button_navi_right">@drawable/afc_selector_main_button_navi_right</item>
         <item name="afc_selector_button_ok_saveas">@drawable/afc_selector_button_ok_saveas_light</item>
         <item name="afc_selector_action_navi_left_foreground">@drawable/afc_selector_action_navi_left_light_foreground</item>
         <item name="afc_selector_action_navi_right_foreground">@drawable/afc_selector_action_navi_right_light_foreground</item>
