--- a/src/keepass2android-app/Resources/layout/config_keeshare.xml
+++ b/src/keepass2android-app/Resources/layout/config_keeshare.xml
@@ -21,8 +21,8 @@
     <ListView
       android:id="@android:id/list"
       android:padding="8dp"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
       android:layout_marginBottom="12dip"
       android:layout_marginLeft="12dip"
       android:layout_marginRight="12dip"
