--- a/src/keepass2android-app/Resources/layout/keeshare_config_row.xml
+++ b/src/keepass2android-app/Resources/layout/keeshare_config_row.xml
@@ -3,7 +3,7 @@
       xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="wrap_content"
       android:orientation="vertical">
 
     <RelativeLayout
@@ -35,7 +35,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:orientation="vertical">
