Allow to reset the setting to skip the secure display check. closes  #2418

--- a/src/keepass2android-app/Resources/layout/no_secure_display_layout.axml
+++ b/src/keepass2android-app/Resources/layout/no_secure_display_layout.axml
@@ -15,7 +15,7 @@
       android:background="#00000000" />
 
 	<TextView android:text="@string/no_secure_display" android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"  android:id="@+id/no_secure_display_text" />
 	<Button android:id="@+id/btn_goto_settings" android:text="@string/IconVisibilityInfo_Android8_btnSettings" android:layout_width="match_parent"
     android:layout_height="wrap_content" />
   <Button android:id="@+id/disable_secure_screen_check" android:text="@string/disable_secure_screen_check" android:layout_width="match_parent"
